# arser

./: CMakeLists.txt  build.py
arser/: CMakeLists.txt
arser/include/arser/: CMakeLists.txt  argument.hpp  argument_parser.hpp  argument_register.hpp
arser/source/: CMakeLists.txt  argument.cpp  argument_parser.cpp  argument_register.cpp
cmake/: arserConfig.cmake
tests/: CMakeLists.txt
tests/argument_aliasing/: CMakeLists.txt  argument_aliasing.cpp
tests/argument_dependency/: CMakeLists.txt
tests/argument_dependency/chaining_dependency/: CMakeLists.txt  chaining_dependency.cpp
tests/argument_dependency/missing_dependency/: CMakeLists.txt  missing_dependency.cpp
tests/argument_parsing/: CMakeLists.txt
tests/argument_parsing/boolean_parsing/: CMakeLists.txt  boolean_parsing.cpp
tests/argument_parsing/generic_parsing/: CMakeLists.txt  generic_parsing.cpp
